# Cinel_bck

./: CMakeLists.txt  JogoGalo.cpp  banco.cpp  editora  editora.cpp  editora2.cpp  exercici021.cpp  exercicio16.cpp  exercicio22.cpp  exercicio25.cpp  exercicio26.cpp  exercicio26_2.cpp  funcoes.cpp  heranca.cpp  ponteiros.cpp  ponteirosClasses.cpp
avaliacoes/: AvalGalo.cpp  Avaliacao5.cpp  Avaliacao7.cpp  avaliacao1.cpp  avaliacao2.cpp
